--- a/lc-admin/src/main/resources/statics/sys/css/templatemo_style.css
+++ b/lc-admin/src/main/resources/statics/sys/css/templatemo_style.css
@@ -353,3 +353,317 @@ input#subject {	width: 100%; }
   .col-xxs-12 { width: 100%; }
   #footer p, #footer .social { text-align: center; }
 }
+.warper{ width: 90%; height: 500px; border: 2px solid #efefef; margin: 0 auto; padding: 3px 3px 0px 0px; }
+#wowslider-container1 { zoom: 1; position: relative; max-width: 716px; float:right; z-index: 90 }
+* html #wowslider-container1 { width: 716px }
+#wowslider-container1 .ws_images ul { position: relative; width: 10000%; height: auto; left: 0; list-style: none; margin: 0; padding: 0; border-spacing: 0; overflow: visible }
+#wowslider-container1 .ws_images ul li { width: 1%; line-height: 0; float: left; font-size: 0; padding: 0!important; margin: 0!important }
+#wowslider-container1 .ws_images { position: relative; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden }
+#wowslider-container1 .ws_images a { width: 100%; display: block; color: transparent }
+#wowslider-container1 img { max-width: none!important }
+#wowslider-container1 .ws_images img { width: 100%; border: none 0; max-width: none; padding: 0; margin: 0 }
+#wowslider-container1 a { text-decoration: none; outline: 0; border: 0 }
+#wowslider-container1 a.ws_next, #wowslider-container1 a.ws_prev { position: absolute; display: none; top: 50%; margin-top: -3.5em; z-index: 60; height: 7.1em; width: 7.1em; background-image: url(../images/arrows.png); background-size: 200% }
+#wowslider-container1 a.ws_next { background-position: 100% 0; right: 1em }
+#wowslider-container1 a.ws_prev { left: 1em; background-position: 0 0 }
+#wowslider-container1 a.ws_next:hover { background-position: 100% 100% }
+#wowslider-container1 a.ws_prev:hover { background-position: 0 100% }
+* html #wowslider-container1 a.ws_next, * html #wowslider-container1 a.ws_prev { display: block }
+#wowslider-container1:hover a.ws_next, #wowslider-container1:hover a.ws_prev { display: block }
+#wowslider-container1 .ws_playpause { display: none; width: 7.1em; height: 7.1em; position: absolute; top: 50%; left: 50%; margin-left: -3.5em; margin-top: -3.5em; z-index: 59; background-size: 100% }
+#wowslider-container1:hover .ws_playpause { display: block }
+#wowslider-container1 .ws_pause { background-image: url(../images/pause.png) }
+#wowslider-container1 .ws_play { background-image: url(../images/play.png) }
+#wowslider-container1 .ws_pause:hover, #wowslider-container1 .ws_play:hover { background-position: 100% 100%!important }
+#wowslider-container1 .ws-title { position: absolute; display: block; bottom: 3.5em; left: 1em; margin-right: 1em; padding: 1em .9em .9em .9em; background-color: rgba(0,0,0,0.4); color: #fff; z-index: 50; font-weight: bold; text-transform: uppercase; border-radius: .2em; -moz-border-radius: .2em; -webkit-border-radius: .2em }
+#wowslider-container1 .ws-title div { margin-top: .3em; font-size: 1.6em; line-height: 1.15em; font-weight: normal; text-transform: none; color: #fff }
+#wowslider-container1 .ws-title span { font-size: 2.4em }
+#wowslider-container1 .ws_thumbs { font-size: 0; position: absolute; overflow: auto; z-index: 70; left: -305.51%; top: 0; width: 100%; height: 100% }
+#wowslider-container1 .ws_thumbs img { text-decoration: none; border: 0; width: 100% }
+#wowslider-container1 .ws_thumbs a { position: relative; text-indent: -4000px; color: transparent; opacity: .85; text-decoration: none; display: inline-block; border: 0; margin-bottom: 4%; text-indent: 0; padding: 2.99%; width: 100%; background-color: #fff }
+#wowslider-container1 .ws_thumbs a:hover { opacity: 1 }
+#wowslider-container1 .ws_thumbs a:hover img { visibility: visible }
+#wowslider-container1 .ws_thumbs div { position: relative; width: 100% }
+#wowslider-container1 .ws_thumbs a.ws_selthumb { background-color: #ff6600 }
+#wowslider-container1 .ws_images ul { animation: wsBasic 16s infinite; -moz-animation: wsBasic 16s infinite; -webkit-animation: wsBasic 16s infinite }
+@keyframes wsBasic { 0% {
+  left:-0%
+}
+  12.5% {
+    left:-0%
+  }
+  25% {
+    left:-100%
+  }
+  37.5% {
+    left:-100%
+  }
+  50% {
+    left:-200%
+  }
+  62.5% {
+    left:-200%
+  }
+  75% {
+    left:-300%
+  }
+  87.5% {
+    left:-300%
+  }
+}
+@-moz-keyframes wsBasic { 0% {
+  left:-0%
+}
+  12.5% {
+    left:-0%
+  }
+  25% {
+    left:-100%
+  }
+  37.5% {
+    left:-100%
+  }
+  50% {
+    left:-200%
+  }
+  62.5% {
+    left:-200%
+  }
+  75% {
+    left:-300%
+  }
+  87.5% {
+    left:-300%
+  }
+}
+@-webkit-keyframes wsBasic { 0% {
+  left:-0%
+}
+  12.5% {
+    left:-0%
+  }
+  25% {
+    left:-100%
+  }
+  37.5% {
+    left:-100%
+  }
+  50% {
+    left:-200%
+  }
+  62.5% {
+    left:-200%
+  }
+  75% {
+    left:-300%
+  }
+  87.5% {
+    left:-300%
+  }
+}
+
+
+/**
+    风格展示
+ */
+.lb-album{
+  width: 900px;
+  margin: 0 auto;
+  font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
+}
+.lb-album li{
+  float: left;
+  margin: 5px;
+  position: relative;
+}
+.lb-album li > a,
+.lb-album li > a img{
+  display: block;
+}
+.lb-album li > a{
+  width: 150px;
+  height: 150px;
+  position: relative;
+  padding: 10px;
+  background: #f1d2c2;
+  -webkit-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+  -moz-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+  box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px 4px 4px 4px;
+}
+.lb-album li > a span{
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  top: 10px;
+  left: 10px;
+  text-align: center;
+  line-height: 150px;
+  color: rgba(27,54,81,0.8);
+  text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
+  font-size: 24px;
+  opacity: 0;
+  filter: alpha(opacity=0); /* internet explorer */
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+  background: rgb(241,210,194);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  -webkit-transition: opacity 0.3s linear;
+  -moz-transition: opacity 0.3s linear;
+  -o-transition: opacity 0.3s linear;
+  -ms-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
+}
+.lb-album li > a:hover span{
+  opacity: 1;
+  filter: alpha(opacity=99); /* internet explorer */
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+}
+.lb-overlay{
+  width: 0px;
+  height: 0px;
+  position: fixed;
+  overflow: hidden;
+  left: 0px;
+  top: 0px;
+  padding: 0px;
+  z-index: 99;
+  text-align: center;
+  background: rgb(241,210,194);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+  background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+}
+.lb-overlay > div{
+  position: relative;
+  color: rgba(27,54,81,0.8);
+  opacity: 0;
+  filter: alpha(opacity=0); /* internet explorer */
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+  width: 550px;
+  margin: 10px auto 0px auto;
+  text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
+  -webkit-transition: opacity 0.3s linear 1.3s;
+  -moz-transition: opacity 0.3s linear 1.3s;
+  -o-transition: opacity 0.3s linear 1.3s;
+  -ms-transition: opacity 0.3s linear 1.3s;
+  transition: opacity 0.3s linear 1.3s;
+}
+.lb-overlay div h3,
+.lb-overlay div p{
+  padding: 0px 20px;
+  width: 200px;
+  height: 60px;
+}
+.lb-overlay div h3{
+  font-size: 36px;
+  float: left;
+  text-align: right;
+  border-right: 1px solid rgba(27,54,81,0.4);
+}
+.lb-overlay div h3 span,
+.lb-overlay div p{
+  font-size: 16px;
+  font-family: Constantia, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  font-style: italic;
+}
+.lb-overlay div h3 span{
+  display: block;
+  line-height: 6px;
+}
+.lb-overlay div p{
+  text-align: left;
+  float: left;
+  width: 260px;
+}
+.lb-overlay a.lb-close{
+  background: rgba(27,54,81,0.8);
+  z-index: 1001;
+  color: #fff;
+  position: absolute;
+  /*top: 43px;*/
+  left: 50%;
+  font-size: 15px;
+  line-height: 26px;
+  text-align: center;
+  width: 50px;
+  height: 23px;
+  overflow: hidden;
+  margin-left: -25px;
+  opacity: 0;
+  filter: alpha(opacity=0); /* internet explorer */
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+  -webkit-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+  -webkit-transition: opacity 0.3s linear 1.2s;
+  -moz-transition: opacity 0.3s linear 1.2s;
+  -o-transition: opacity 0.3s linear 1.2s;
+  -ms-transition: opacity 0.3s linear 1.2s;
+  transition: opacity 0.3s linear 1.2s;
+}
+.lb-overlay img{
+  /* height: 100%; For Opera max-height does not seem to work */
+  max-height: 100%;
+  position: relative;
+  -webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+  -moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+  box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
+}
+.lb-overlay:target {
+  width: auto;
+  height: auto;
+  bottom: 0px;
+  right: 0px;
+  padding: 80px 100px 120px 100px;
+}
+.lb-overlay:target img {
+  -webkit-animation: fadeInScale 1.2s ease-in-out;
+  -moz-animation: fadeInScale 1.2s ease-in-out;
+  -o-animation: fadeInScale 1.2s ease-in-out;
+  -ms-animation: fadeInScale 1.2s ease-in-out;
+  animation: fadeInScale 1.2s ease-in-out;
+}
+.lb-overlay:target a.lb-close,
+.lb-overlay:target > div{
+  opacity: 1;
+  filter: alpha(opacity=99); /* internet explorer */
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+}
+@-webkit-keyframes fadeInScale {
+  0% { -webkit-transform: scale(0.6); opacity: 0; }
+  100% { -webkit-transform: scale(1); opacity: 1; }
+}
+@-moz-keyframes fadeInScale {
+  0% { -moz-transform: scale(0.6); opacity: 0; }
+  100% { -moz-transform: scale(1); opacity: 1; }
+}
+@-o-keyframes fadeInScale {
+  0% { -o-transform: scale(0.6); opacity: 0; }
+  100% { -o-transform: scale(1); opacity: 1; }
+}
+@-ms-keyframes fadeInScale {
+  0% { -ms-transform: scale(0.6); opacity: 0; }
+  100% { -ms-transform: scale(1); opacity: 1; }
+}
+@keyframes fadeInScale {
+  0% { transform: scale(0.6); opacity: 0; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
+/*
+	100% Height for Opera as the max-height seems to be ignored, not optimal for large screens
+	http://bricss.net/post/11230266445/css-hack-to-target-opera
+*/
+x:-o-prefocus, .lb-overlay img {
+  height: 100%;
+}
